[gd_scene load_steps=2 format=3 uid="uid://br813p4gprdda"]

[ext_resource type="Script" uid="uid://bss7kap4bv52i" path="res://scripts/enemy_spawner.gd" id="1_ks1gq"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_ks1gq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["enemy-spawner"]]
rect = Rect2(-240, -135, 480, 270)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
